# IASS

./: .env  .gitignore  README.md  deployment.md  docker-compose.override.yml  docker-compose.yml  hello.py  hub.env  pyproject.toml  site.env
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: initial_data.py  jobs.py  main.py  tasks.py  utils.py
development/: README.md  utils.py
development/0. tutorial/: how_to_count_the_objects_using_ultralytics_yolo.ipynb  notebook_utils.py
development/1. preprocess/: CropFrame.ipynb  Streaming (Recovery).ipynb  Streaming.ipynb
development/2. train/: delta_epsilon.ipynb
development/3. deploy/: .gitignore  Track.ipynb  export.py  inference.py  stream.py  vehicle_base.py  vehicle_counter.py  vehicle_job.py  vehicle_main.py  vehicle_state.py  vehicle_streamer.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json
frontend/src/: routeTree.gen.ts  theme.tsx
frontend/tests/: config.ts
frontend_dashboard/: README.md  main.py  pyproject.toml
frontend_dashboard/app/: config.py  config.yaml  streamlit_app.py
frontend_dashboard/app/auth/: login.py  logout.py
frontend_dashboard/app/edge/: crop.py
frontend_dashboard/app/home/: welcome.py
modelling/2. train/: delta.ipynb
modelling/3. deploy/: Track.ipynb  export.py
notebook/: .gitignore  README.md  utils.py
notebook/0. tutorial/: person-counting.ipynb
notebook/1. preprocess/: CropFrame.ipynb  Streaming.ipynb  TrainTestSplit.ipynb
notebook/3. deploy/: Track.ipynb
notebook/preprocessing/: CropFrame.ipynb  (+3 more)
(+90 files in other folders)
