[project]
name = "iass"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "onnxruntime>=1.20.1",
    "shapely>=2.0.7",
    "ultralytics>=8.3.74",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "onnx==1.16.1",
    "onnxslim>=0.1.48",
    "opencv-python>=4.11.0.86",
    "pre-commit>=4.1.0",
]
