[project]
name = "iass"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "lap>=0.5.12",
    "onnx==1.16.1",
    "onnxslim>=0.1.48",
    "opencv-python>=4.11.0.86",
    "openvino>=2025.0.0",
    "pre-commit>=4.1.0",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
    "onnxruntime>=1.20.1",
    "shapely>=2.0.7",
    "ultralytics>=8.3.74",
]
